# horizon_flux

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  package-lock.json  pyproject.toml
crates/armillary-cli/: Cargo.toml
crates/armillary-cli/src/: backfill.rs  catalog.rs  config.rs  environment.rs  incremental.rs  lineage.rs  main.rs  metadata.rs  pipeline.rs  plugin.rs  secret.rs  server.rs  snapshot.rs  snippet.rs  trigger.rs  udf.rs
crates/armillary-datafusion/: Cargo.toml
crates/armillary-datafusion/src/: backfill.rs  backfill_store.rs  column_lineage.rs  column_stats.rs  error.rs  executor.rs  failure_report.rs  friendly_sql.rs  incremental_coordinator.rs  incremental_state.rs  output_cache.rs  preview.rs  provider.rs  python_env.rs  python_runner.py  python_runtime.rs  resolver.rs  result.rs  run.rs  run_store.rs  schema_diff.rs  session.rs  stats.rs  storage.rs  test_assertion.rs  udfs.rs  watermark.rs
crates/armillary-datafusion/tests/: backfill_test.rs  column_lineage_test.rs  cross_layer_integration_test.rs  environment_test.rs  executor_test.rs  incremental_test.rs  pipeline_integration_test.rs  preview_test.rs  test_polars_lineage.py
crates/armillary-engine/: Cargo.toml
crates/armillary-engine/src/: backfill.rs  catalog.rs  column_lineage.rs  edge.rs  error.rs  lib.rs  lineage.rs  materialization.rs  pipeline_store.rs  sla.rs  snapshot.rs  storage.rs  validate.rs  variables.rs
crates/armillary-engine/tests/: snippet_integration.rs
crates/armillary-observability/: Cargo.toml
crates/armillary-observability/src/: config.rs  events.rs  json_format.rs  lib.rs  metrics.rs  openlineage.rs  otel.rs
crates/armillary-observability/tests/: json_logging.rs  otel_config_test.rs
crates/armillary-plugin-protocol/: Cargo.toml  README.md
crates/armillary-plugin-protocol/src/: control.rs  frame.rs  lib.rs
crates/armillary-plugin-sdk/: Cargo.toml  README.md
crates/armillary-plugin-sdk/src/: lib.rs  log.rs
crates/armillary-scheduler/: Cargo.toml
crates/armillary-scheduler/src/: cron.rs  interval.rs  lib.rs  scheduler.rs  variable_mapping.rs
crates/armillary-scheduler/src/sensors/: file_arrival.rs  mod.rs
crates/armillary-server/: Cargo.toml
crates/armillary-server/src/: dev_proxy.rs  error.rs  lib.rs  lockfile.rs  port.rs  shutdown.rs  sla_evaluator.rs  state.rs  static_files.rs  ws.rs
crates/armillary-server/src/api/: backfills.rs  catalog.rs  connectors.rs  environments.rs  health.rs  lineage.rs  metrics.rs  pipelines.rs  plugins.rs  preview.rs  runs.rs  secrets.rs  sla.rs  snapshot.rs  triggers.rs  webhook.rs
crates/armillary-server/tests/: backfill_api.rs  catalog_api.rs  connector_api.rs  environment_api.rs  health_api.rs  lineage_api.rs  pipeline_api.rs  plugin_api.rs  preview_api.rs  secret_api.rs  trigger_api.rs  ws_api.rs
crates/armillary-tray/: Cargo.toml
crates/armillary-tray/src/: lib.rs  menu.rs  notification.rs  prefs.rs
crates/flux-cli/: Cargo.toml
crates/flux-cli/src/: backfill.rs  catalog.rs  color.rs  config.rs  environment.rs  incremental.rs  lineage.rs  main.rs  metadata.rs  pipeline.rs  plugin.rs  secret.rs  server.rs  snapshot.rs  trigger.rs
crates/flux-connectors/: Cargo.toml
crates/flux-connectors/src/: cloud_store.rs  config.rs  file_sink.rs  file_source.rs  fingerprint.rs  lib.rs  parquet_snapshot.rs  plugin_sink.rs  postgres_sink.rs  postgres_snapshot.rs  postgres_source.rs  registry.rs  rest_api_source.rs  snapshot_query.rs  stdout_sink.rs
crates/flux-connectors/tests/: file_sink_test.rs  file_source_test.rs  parquet_snapshot_test.rs  postgres_snapshot_test.rs
crates/flux-datafusion/: Cargo.toml
crates/flux-datafusion/src/: backfill.rs  backfill_store.rs  column_lineage.rs  environment.rs  error.rs  executor.rs  failure_report.rs  friendly_sql.rs  incremental_coordinator.rs  lib.rs  output_cache.rs  polars_lineage.py  preview.rs  provider.rs  python_env.rs  python_runner.py  python_runtime.rs  resolver.rs  result.rs  run.rs  run_store.rs  schema_diff.rs  stats.rs  storage.rs  watermark.rs
crates/flux-datafusion/tests/: backfill_test.rs  column_lineage_test.rs  environment_test.rs  executor_test.rs  incremental_test.rs  pipeline_integration_test.rs  preview_test.rs  test_polars_lineage.py
crates/flux-engine/: Cargo.toml
crates/flux-engine/src/: backfill.rs  catalog.rs  column_lineage.rs  dag.rs  error.rs  lib.rs  lineage.rs  materialization.rs  node.rs  pipeline.rs  pipeline_store.rs  sample.rs  snapshot.rs  snippet.rs  validate.rs  variables.rs
crates/flux-plugin-host/: Cargo.toml
crates/flux-plugin-host/examples/: mock_plugin.rs
crates/flux-plugin-host/src/: arrow_ipc.rs  discovery.rs  error.rs  lib.rs  manifest.rs  process.rs  session.rs  transport.rs
crates/flux-plugin-host/src/protocol/: control.rs  frame.rs  mod.rs
crates/flux-plugin-host/tests/: end_to_end.rs  failure_modes.rs  openboard_plugin.rs
crates/flux-plugin-sdk/: Cargo.toml  README.md
crates/flux-plugin-sdk/src/: lib.rs  log.rs
crates/flux-postgres/: Cargo.toml
crates/flux-postgres/src/: bulk.rs  environment.rs  lib.rs  pipeline_store.rs  run_store.rs  schema.rs
crates/flux-postgres/tests/: postgres_test.rs
crates/flux-scheduler/: Cargo.toml
crates/flux-scheduler/src/: error.rs  lib.rs  scheduler.rs  store.rs  types.rs  variable_mapping.rs
crates/flux-secrets/: Cargo.toml
crates/flux-secrets/src/: error.rs  lib.rs  resolve.rs  store.rs
crates/flux-secrets/tests/: integration.rs
crates/flux-server/: Cargo.toml
crates/flux-server/src/: lib.rs  lockfile.rs  port.rs  sla_evaluator.rs  state.rs  ws.rs
crates/flux-server/src/api/: backfills.rs  (+17 more)
crates/flux-server/tests/: backfill_api.rs  catalog_api.rs  connector_api.rs  environment_api.rs  health_api.rs  lineage_api.rs  pipeline_api.rs  plugin_api.rs  preview_api.rs  secret_api.rs  trigger_api.rs  ws_api.rs
crates/flux-tray/: Cargo.toml
crates/flux-tray/src/: icon.rs  lib.rs  menu.rs  notification.rs  prefs.rs
examples/plugins/parquet-plugin/: Cargo.toml  config_schema.json  plugin.toml
(+243 files in other folders)
