[workspace]
members = [
    "crates/flux-engine",
    "crates/flux-datafusion",
    "crates/flux-connectors",
    "crates/flux-secrets",
    "crates/flux-server",
    "crates/flux-tray",
    "crates/flux-cli",
    "crates/flux-postgres",
    "crates/flux-plugin-host",
    "crates/flux-plugin-protocol",
    "crates/flux-plugin-sdk",
    "crates/flux-scheduler",
    "crates/flux-observability",
    "examples/plugins/parquet-plugin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/horizon-analytic/horizon-flux"

[workspace.dependencies]
# Internal crates
flux-engine = { path = "crates/flux-engine" }
flux-datafusion = { path = "crates/flux-datafusion" }
flux-connectors = { path = "crates/flux-connectors" }
flux-secrets = { path = "crates/flux-secrets" }
flux-server = { path = "crates/flux-server" }
flux-tray = { path = "crates/flux-tray" }
flux-postgres = { path = "crates/flux-postgres" }
flux-plugin-host = { path = "crates/flux-plugin-host" }
flux-plugin-protocol = { path = "crates/flux-plugin-protocol" }
flux-plugin-sdk = { path = "crates/flux-plugin-sdk" }
flux-scheduler = { path = "crates/flux-scheduler" }
flux-observability = { path = "crates/flux-observability" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Data processing
datafusion = "53"
arrow = "58"
object_store = { version = "0.13", features = ["aws", "gcp", "azure", "http"] }
url = "2"
polars = { version = "0.53", features = ["lazy"] }
sqlparser = { version = "0.61", features = ["visitor"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.39", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
chrono = "0.4"
chrono-tz = "0.10"
croner = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Async
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["rustls-tls", "json"] }

# Regex
regex = "1"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9"

# CLI
clap = { version = "4", features = ["derive", "env"] }
owo-colors = { version = "4", features = ["supports-colors"] }
rpassword = "7"

# Configuration
toml = "0.8"

# Filesystem
dirs = "6"
glob = "0.3"
directories = "5"
semver = "1"
dotenvy = "0.15"

# Browser
open = "5"

# Platform
libc = "0.2"

# System tray & notifications
tray-icon = "0.19"
notify-rust = "4"
crossbeam-channel = "0.5"

# Utilities
uuid = { version = "1", features = ["v4", "v5", "serde"] }
base64 = "0.22"

# Static file embedding
rust-embed = { version = "8", features = ["mime-guess", "interpolate-folder-path"] }
mime_guess = "2"

# Testing
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
