[package]
name = "armillary-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "armillary"
path = "src/main.rs"

[dependencies]
armillary-engine = { workspace = true }
armillary-datafusion = { workspace = true }
armillary-connectors = { workspace = true }
armillary-secrets = { workspace = true }
armillary-server = { workspace = true }
armillary-plugin-host = { workspace = true }
armillary-tray = { workspace = true, optional = true }
armillary-postgres = { workspace = true }
armillary-scheduler = { workspace = true }
armillary-observability = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
owo-colors = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
libc = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }
anyhow = { workspace = true }
arrow = { workspace = true }
tokio-postgres = { workspace = true }

[features]
default = ["tray"]
tray = ["dep:armillary-tray"]

[dev-dependencies]
tempfile = { workspace = true }
