[package]
name = "armillary-plugin-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire protocol types and framing for the Armillary plugin system. Shared between host and SDK."

[dependencies]
arrow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
