[package]
name = "flux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "horizon-flux"
path = "src/main.rs"

[dependencies]
flux-engine = { workspace = true }
flux-secrets = { workspace = true }
flux-server = { workspace = true }
flux-tray = { workspace = true }
clap = { workspace = true }
rpassword = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
