[package]
name = "flux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "horizon-flux"
path = "src/main.rs"

[dependencies]
flux-engine = { workspace = true }
flux-datafusion = { workspace = true }
flux-connectors = { workspace = true }
flux-secrets = { workspace = true }
flux-server = { workspace = true }
flux-plugin-host = { workspace = true }
flux-tray = { workspace = true, optional = true }
flux-postgres = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
owo-colors = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
libc = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
arrow = { workspace = true }

[features]
default = ["tray"]
tray = ["dep:flux-tray"]

[dev-dependencies]
tempfile = { workspace = true }
