[package]
name = "flux-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flux-engine = { workspace = true }
flux-datafusion = { workspace = true }
datafusion = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
