[package]
name = "flux-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flux-engine = { workspace = true }
flux-datafusion = { workspace = true }
flux-plugin-host = { workspace = true }
datafusion = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
glob = "0.3"
object_store = { workspace = true }
url = { workspace = true }
tokio-postgres = { workspace = true }
chrono = { workspace = true }
parquet = { version = "58", features = ["arrow"] }
reqwest = { workspace = true }
csv = "1"

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
chrono = { workspace = true }
