[package]
name = "flux-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flux-plugin-protocol = { workspace = true }
flux-observability = { workspace = true }
arrow = { workspace = true }
base64 = { workspace = true }
directories = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[example]]
name = "mock-plugin"
path = "examples/mock_plugin.rs"
