[package]
name = "flux-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust SDK for writing Horizon Flux sink plugins. Implement one trait, call run(), done."

[dependencies]
flux-plugin-protocol = { workspace = true }
arrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
