[package]
name = "flux-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
