[package]
name = "flux-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flux-engine = { workspace = true }
flux-datafusion = { workspace = true }
flux-connectors = { workspace = true }
flux-observability = { workspace = true }
flux-plugin-host = { workspace = true }
flux-scheduler = { workspace = true }
flux-secrets = { workspace = true }
arrow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
open = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
flux-connectors = { workspace = true }
flux-plugin-host = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }
