[package]
name = "flux-parquet-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Reference plugin for Horizon Flux: writes incoming record batches to a Parquet file."

[[bin]]
name = "flux-parquet-plugin"
path = "src/main.rs"

[dependencies]
arrow = { workspace = true }
parquet = { version = "58", features = ["arrow"] }
flux-plugin-host = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
