[package]
name = "flux-parquet-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Reference plugin for Horizon Flux: writes incoming record batches to a Parquet file."

[[bin]]
name = "flux-parquet-plugin"
path = "src/main.rs"

[dependencies]
arrow = { workspace = true }
parquet = { version = "58", features = ["arrow"] }
flux-plugin-sdk = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
flux-plugin-host = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
