[package]
name = "armillary-parquet-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Reference plugin for Armillary: writes incoming record batches to a Parquet file."

[[bin]]
name = "armillary-parquet-plugin"
path = "src/main.rs"

[dependencies]
arrow = { workspace = true }
parquet = { version = "58", features = ["arrow"] }
armillary-plugin-sdk = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
armillary-plugin-host = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
